<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.create.CreateActivity">
  <LinearLayout
      android:layout_marginTop="@dimen/_8sdp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_width="match_parent"
      android:layout_marginEnd="@dimen/_8sdp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_8sdp"
      android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/status"
        />
  
    <RadioGroup
        android:layout_marginTop="@dimen/_4sdp"
        android:checkedButton="@+id/rb_active"
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/pick_outline"
        android:orientation="horizontal">
    
      <RadioButton
          android:layout_marginTop="1dp"
          android:layout_marginBottom="1dp"
          android:layout_marginStart="1dp"
          android:id="@+id/rb_active"
          android:background="@drawable/toggle_widged_background"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:button="@null"
          android:gravity="center"
          android:text="@string/active"
          android:textColor="@color/white" />
    
      <RadioButton
          android:layout_marginEnd="1dp"
          android:layout_marginTop="1dp"
          android:layout_marginBottom="1dp"
          android:id="@+id/rb_inactive"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@drawable/toggle_widged_background"
          android:button="@null"
          android:gravity="center"
          android:text="@string/inactive"
          android:textColor="@color/white" />
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLines="1"
        android:textStyle="normal"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:prefixText="Omega - ">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>
  
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLines="1"
        android:textStyle="normal"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>
  
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLines="1"
        android:textStyle="normal"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>
  
  
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_zip_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLines="1"
        android:textStyle="normal"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
  
  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_simpan"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_20sdp"
      android:layout_marginEnd="@dimen/_20sdp"
      android:text="@string/simpan"
      app:cornerRadius="@dimen/_5sdp"
      
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:translationZ="@dimen/_4sdp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="@dimen/_20sdp"
      />
<ProgressBar
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:translationZ="@dimen/_4sdp"
    android:visibility="gone"
    android:id="@+id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>