<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 
  <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/imv_rounded"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_height="@dimen/_35sdp"
      android:src="@drawable/ss"
      app:layout_constraintEnd_toStartOf="@id/linear"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginTop="@dimen/_8sdp"
      android:layout_marginBottom="@dimen/_8sdp"
      android:layout_marginStart="@dimen/_8sdp"
      android:layout_marginEnd="@dimen/_8sdp"
      android:theme="@style/roundedCorners"
      android:layout_width="@dimen/_35sdp"
      />
  <LinearLayout
      app:layout_constraintBottom_toBottomOf="@id/imv_rounded"
      android:id="@+id/linear"
      app:layout_constraintTop_toTopOf="@id/imv_rounded"
      app:layout_constraintStart_toEndOf="@id/imv_rounded"
      android:layout_width="0dp"
      app:layout_constraintEnd_toStartOf="@+id/tv_inactive"
      android:orientation="vertical"
      android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_judul"
        android:text="@string/omega_jogja"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_active"
        android:text="@string/online_booking_enable"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

  </LinearLayout>
  <TextView
      android:id="@+id/tv_inactive"
      android:text="@string/inactive"
      app:layout_constraintTop_toTopOf="@id/imv_rounded"
      app:layout_constraintBottom_toBottomOf="@id/imv_rounded"
      app:layout_constraintEnd_toStartOf="@id/imgicn"
      android:layout_width="wrap_content"
      android:textStyle="normal"
      android:layout_marginEnd="@dimen/_12sdp"
      android:layout_height="wrap_content"/>
  <ImageView
      android:id="@+id/imgicn"
      android:layout_width="wrap_content"
      app:layout_constraintTop_toTopOf="@id/imv_rounded"
      app:layout_constraintBottom_toBottomOf="@id/imv_rounded"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="@dimen/_8sdp"
      android:src="@drawable/ic_baseline_arrow_forward_ios_24"
      android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>